--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ html {
 }
 
 .grid-container {
+  height: 100vh;
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
 .image {
-  grid-column: 1;
   background-image: url("assets/golf_2.jpg");
   background-size: cover;
   height: 100vh;
@@ -50,15 +50,15 @@ h1 {
 
 .form {
   grid-column: 2;
+  grid-row: 1 / 3;
   background-color: black;
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1.3fr 1.1fr 1.3fr;
 }
 
 .intro {
   color: #aaaaaa;
   background-color: black;
-  height: 165px;
   padding-top: 105px;
   padding-left: 25px;
   width: 500px;
@@ -67,6 +67,7 @@ h1 {
 }
 
 .sign-up-form {
+  margin-left: 25px;
   background-color: #aaaaaa;
   display: grid;
   grid-template-columns: 2fr 2fr 1fr;
@@ -79,7 +80,7 @@ label {
 }
 
 input {
-  margin-top: 5px;
+  margin-top: 7px;
   border-radius: 2px;
   border: none;
   height: 25px;
@@ -88,6 +89,7 @@ input {
 
 input:focus,
 input:active {
+  box-shadow: 2px 2px 2px purple;
   outline: 2px solid purple;
 }
 
@@ -102,4 +104,48 @@ label {
 
 .form-row-3 {
   grid-row-start: 3;
+}
+
+button {
+  margin: 60px 25px 10px;
+  width: 200px;
+  padding: 10px 40px;
+  border: none;
+  border-radius: 2px;
+  transition: 350ms;
+  background-color: #542c30;
+  color: #fff;
+}
+
+button:focus,
+button:active {
+  outline: 2px solid purple;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: #49272a;
+  color: white;
+}
+
+p {
+  color: white;
+}
+
+p a {
+  color: white;
+}
+
+.login p {
+  padding-left: 25px;
+}
+
+input[type="password"] {
+  background-color: rgb(223, 159, 159);
+  outline: 2px solid rgb(207, 29, 29);
+}
+
+.error {
+  margin-top: 5px;
+  color: red;
 }
