--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,400;0,500;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,400;0,500;1,300;1,400&display=swap");
 
 html {
   font-family: "Red Hat Display", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+i {
+  font-style: italic;
 }
 
 .grid-container {
@@ -37,15 +41,19 @@ html {
 
 h1 {
   position: absolute;
-  top: 93px;
+  top: 68px;
   background-color: rgb(255, 255, 255, 0.4);
   color: #fff;
   width: 100%;
   text-align: center;
-  padding: 20px 0;
+  padding: 33px 0;
   font-size: 2rem;
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
+}
+
+.intro p:nth-child(2) {
+  margin: 10px 0;
 }
 
 .form {
@@ -59,7 +67,7 @@ h1 {
 .intro {
   color: #aaaaaa;
   background-color: black;
-  padding-top: 105px;
+  padding-top: 67px;
   padding-left: 25px;
   width: 500px;
   font-size: 1.1rem;
@@ -72,6 +80,8 @@ h1 {
   display: grid;
   grid-template-columns: 2fr 2fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
 }
 
 input,
@@ -89,8 +99,8 @@ input {
 
 input:focus,
 input:active {
-  box-shadow: 2px 2px 2px purple;
-  outline: 2px solid purple;
+  box-shadow: 2px 2px 2px #542c30;
+  outline: 2px solid #542c30;
 }
 
 label {
@@ -119,7 +129,7 @@ button {
 
 button:focus,
 button:active {
-  outline: 2px solid purple;
+  outline: 2px solid #49272a;
 }
 
 button:hover {
