--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,400;0,500;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@700&family=Red+Hat+Display:ital,wght@0,400;0,500;1,300;1,400&display=swap");
 
 html {
   font-family: "Red Hat Display", -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -50,6 +50,8 @@ h1 {
   font-size: 2rem;
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
+  font-size: 3rem;
+  font-family: "Quicksand", sans-serif;
 }
 
 .intro p:nth-child(2) {
@@ -67,7 +69,7 @@ h1 {
 .intro {
   color: #aaaaaa;
   background-color: black;
-  padding-top: 67px;
+  padding-top: 74px;
   padding-left: 25px;
   width: 500px;
   font-size: 1.1rem;
